@@ -609,6 +609,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Framework\Scopes\FlushAction.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Framework\Scopes\HybridWebThreadScopeInfo.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
